Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113832

6.5.1 Qt MM crashes when playing a simple mp4 on AMD cards

XMLWordPrintable

    • Windows
    • baf899700 (dev), ec331bffc (6.6), b977cfb44 (6.5)

      Video: https://gitlab.com/kelteseth/ScreenPlay/-/blob/master/Content/wallpaper_video_nebula/mantissa.xyz_loop_072.mp4

      This is with the ffmpeg backend on Windows 11 with latest AMD driver (Vega VII). Does not crash with windows backend!

      qputenv("QT_MEDIA_BACKEND", "windows"); 

      this is with ffmpeg release and debug:

       

      Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'C:/Code/cpp/ScreenPlay/ScreenPlay/Content/wallpaper_video_nebula/mantissa.xyz_loop_072.mp4':
        Metadata:
          major_brand     : isom
          minor_version   : 512
          compatible_brands: isomiso2avc1mp41
          encoder         : Lavf57.83.100
        Duration: 00:00:15.00, start: 0.000000, bitrate: 24268 kb/s
        Stream #0:0[0x1](und): Video: h264 (High) (avc1 / 0x31637661), yuv420p(progressive), 2048x1152 [SAR 1:1 DAR 16:9], 24265 kb/s, 60 fps, 60 tbr, 15360 tbn (default)
          Metadata:
            handler_name    : VideoHandler
            vendor_id       : [0][0][0][0]
      D3D11: Removing Device.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: _com_error at memory location 0x00000018E1FFB070.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: _com_error at memory location 0x00000018E1FFB750.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: _com_error at memory location 0x00000018E1FFBA70.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: _com_error at memory location 0x00000018E1FFC038.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: [rethrow] at memory location 0x0000000000000000.
      Exception thrown at 0x00007FFCB0C7536C in ScreenPlayWallpaper.exe: Microsoft C++ exception: _com_error at memory location 0x00000018E1FFC038.
      Exception thrown at 0x00007FFC08A2A57A (Qt6Guid.dll) in ScreenPlayWallpaper.exe: 0xC0000005: Access violation reading location 0xFFFFFFFFFFFFFFFF. 

       

      Steps to reproduce:

      1. You need Windows with an AMD card
      2. Download LoooopyLoop.zip attached test project
      3. Download test mp4 https://gitlab.com/kelteseth/ScreenPlay/-/blob/master/Content/wallpaper_video_nebula/mantissa.xyz_loop_072.mp4
      4. Select the file and press play
      5.  Change  qputenv("QT_MEDIA_BACKEND", "ffmpeg"); in the main to 
        windows. This will not crash, ffmpeg does.

       

        1. alternate_file_codec.png
          alternate_file_codec.png
          27 kB
        2. crash.png
          crash.png
          285 kB
        3. dx_log_full.txt
          346 kB
        4. image-2023-05-31-13-40-43-373.png
          image-2023-05-31-13-40-43-373.png
          116 kB
        5. image-2023-05-31-13-41-25-217.png
          image-2023-05-31-13-41-25-217.png
          154 kB
        6. image-2023-06-29-11-42-02-165.png
          image-2023-06-29-11-42-02-165.png
          1.13 MB
        7. image-2023-06-30-16-25-00-172.png
          image-2023-06-30-16-25-00-172.png
          68 kB
        8. LoooopyLoop.txt
          141 kB
        9. LoooopyLoop.zip
          1 kB
        10. LoooopyLoop-alternate_file.txt
          289 kB
        11. LoooopyLoop-backtrace.txt
          124 kB
        12. primary_file_codec.png
          primary_file_codec.png
          17 kB
        13. screenshot-1.png
          screenshot-1.png
          105 kB
        For Gerrit Dashboard: QTBUG-113832
        # Subject Branch Project Status CR V

            artemiy Artem Dyomin
            kelteseth Elias Steurer
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes